# Nexus

./: .env.example  .gitignore  CLAUDE.md  Makefile  Plan.md  README.md  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agents/: graph.py  state.py
backend/src/agents/nodes/: __init__.py  coder.py  planner.py  researcher.py  reviewer.py
backend/src/agents/tools/: __init__.py  calculator.py  code_exec.py  db_query.py  search.py
backend/src/api/routes/: agents.py  chat.py  documents.py  feedback.py  health.py
backend/src/auth/: jwt.py  middleware.py
backend/src/core/: ab_testing.py  embeddings.py  guardrails.py  llm.py  model_router.py
backend/src/eval/: dataset.py  evaluator.py  metrics.py
backend/src/observability/: langfuse_client.py  logging.py  metrics.py
backend/src/rag/: chain.py  ingestion.py  retriever.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_rag.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
docs/lessons/: 01-config-settings.md  02-llm-client.md  03-embeddings.md  04-rag-ingestion.md  05-hybrid-retriever.md  06-rag-chain.md  07-chat-api-sse.md  08-langgraph-agents.md  09-kubernetes.md  (+3 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo
k8s/: configmap.yml  namespace.yml  secret.yml
models/: .gitignore
monitoring/: prometheus.yml
scripts/: k8s-deploy.sh  k8s-setup.sh  run-eval.sh  seed-documents.sh  setup.sh  start-llamacpp.sh
(+41 files in other folders)
